--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pb.mytudu">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".Starter"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/OrenStyle">
-        <activity android:name=".modul.listTask.ListTaskActivity">
+        <activity android:name=".modul.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modul.formTask.FormTaskActivity"/>
+        <activity android:name=".modul.listTask.ListTaskActivity"></activity>
+        <activity android:name=".modul.formTask.FormTaskActivity" />
     </application>
 
 </manifest>
