--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".modul.listTask.ListTaskActivity"></activity>
         <activity android:name=".modul.formTask.FormTaskActivity" />
+        <activity android:name=".modul.register.RegisterActivity" />
     </application>
 
 </manifest>
