--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".modul.listTask.ListTaskActivity"></activity>
         <activity android:name=".modul.formTask.FormTaskActivity" />
         <activity android:name=".modul.register.RegisterActivity" />
+        <activity android:name=".modul.user.ProfileActivity" />
     </application>
 
 </manifest>
